--- a/src/bison/parser.html
+++ b/src/bison/parser.html
@@ -271,43 +271,43 @@
       <li>on left: <a href="#rule_0">0</a></li>
     </ul>
   </li>
-  <li><b>chunk</b> &lt;syntax_tree_interface_ptr&gt; (62)
+  <li><b>chunk</b> &lt;fakelua::syntax_tree_interface_ptr&gt; (62)
     <ul>
       <li>on left: <a href="#rule_1">1</a></li>
       <li>on right: <a href="#rule_0">0</a></li>
     </ul>
   </li>
-  <li><b>block</b> &lt;syntax_tree_interface_ptr&gt; (63)
+  <li><b>block</b> &lt;fakelua::syntax_tree_interface_ptr&gt; (63)
     <ul>
       <li>on left: <a href="#rule_2">2</a> <a href="#rule_3">3</a> <a href="#rule_4">4</a></li>
       <li>on right: <a href="#rule_1">1</a> <a href="#rule_4">4</a> <a href="#rule_42">42</a> <a href="#rule_43">43</a></li>
     </ul>
   </li>
-  <li><b>stmt</b> &lt;syntax_tree_interface_ptr&gt; (64)
+  <li><b>stmt</b> &lt;fakelua::syntax_tree_interface_ptr&gt; (64)
     <ul>
       <li>on left: <a href="#rule_5">5</a> <a href="#rule_6">6</a> <a href="#rule_7">7</a> <a href="#rule_8">8</a></li>
       <li>on right: <a href="#rule_3">3</a> <a href="#rule_4">4</a></li>
     </ul>
   </li>
-  <li><b>retstat</b> (65)
+  <li><b>retstat</b> &lt;fakelua::syntax_tree_interface_ptr&gt; (65)
     <ul>
       <li>on left: <a href="#rule_9">9</a> <a href="#rule_10">10</a></li>
       <li>on right: <a href="#rule_5">5</a></li>
     </ul>
   </li>
-  <li><b>label</b> &lt;syntax_tree_interface_ptr&gt; (66)
+  <li><b>label</b> &lt;fakelua::syntax_tree_interface_ptr&gt; (66)
     <ul>
       <li>on left: <a href="#rule_11">11</a></li>
       <li>on right: <a href="#rule_8">8</a></li>
     </ul>
   </li>
-  <li><b>varlist</b> (67)
+  <li><b>varlist</b> &lt;fakelua::syntax_tree_interface_ptr&gt; (67)
     <ul>
       <li>on left: <a href="#rule_12">12</a> <a href="#rule_13">13</a></li>
       <li>on right: <a href="#rule_7">7</a> <a href="#rule_13">13</a></li>
     </ul>
   </li>
-  <li><b>var</b> (68)
+  <li><b>var</b> &lt;fakelua::syntax_tree_interface_ptr&gt; (68)
     <ul>
       <li>on left: <a href="#rule_14">14</a> <a href="#rule_15">15</a> <a href="#rule_16">16</a></li>
       <li>on right: <a href="#rule_12">12</a> <a href="#rule_13">13</a> <a href="#rule_32">32</a></li>
@@ -319,7 +319,7 @@
       <li>on right: <a href="#rule_18">18</a> <a href="#rule_44">44</a> <a href="#rule_45">45</a></li>
     </ul>
   </li>
-  <li><b>explist</b> (70)
+  <li><b>explist</b> &lt;fakelua::syntax_tree_interface_ptr&gt; (70)
     <ul>
       <li>on left: <a href="#rule_19">19</a> <a href="#rule_20">20</a></li>
       <li>on right: <a href="#rule_7">7</a> <a href="#rule_10">10</a> <a href="#rule_20">20</a> <a href="#rule_37">37</a></li>
