--- a/src/bison/parser.html
+++ b/src/bison/parser.html
@@ -325,19 +325,19 @@
       <li>on right: <a href="#rule_7">7</a> <a href="#rule_10">10</a> <a href="#rule_20">20</a> <a href="#rule_37">37</a></li>
     </ul>
   </li>
-  <li><b>exp</b> (71)
+  <li><b>exp</b> &lt;fakelua::syntax_tree_interface_ptr&gt; (71)
     <ul>
       <li>on left: <a href="#rule_21">21</a> <a href="#rule_22">22</a> <a href="#rule_23">23</a> <a href="#rule_24">24</a> <a href="#rule_25">25</a> <a href="#rule_26">26</a> <a href="#rule_27">27</a> <a href="#rule_28">28</a> <a href="#rule_29">29</a> <a href="#rule_30">30</a> <a href="#rule_31">31</a></li>
       <li>on right: <a href="#rule_15">15</a> <a href="#rule_19">19</a> <a href="#rule_20">20</a> <a href="#rule_30">30</a> <a href="#rule_31">31</a> <a href="#rule_34">34</a> <a href="#rule_51">51</a> <a href="#rule_52">52</a> <a href="#rule_53">53</a></li>
     </ul>
   </li>
-  <li><b>prefixexp</b> (72)
+  <li><b>prefixexp</b> &lt;fakelua::syntax_tree_interface_ptr&gt; (72)
     <ul>
       <li>on left: <a href="#rule_32">32</a> <a href="#rule_33">33</a> <a href="#rule_34">34</a></li>
       <li>on right: <a href="#rule_15">15</a> <a href="#rule_16">16</a> <a href="#rule_28">28</a> <a href="#rule_35">35</a> <a href="#rule_36">36</a></li>
     </ul>
   </li>
-  <li><b>functioncall</b> (73)
+  <li><b>functioncall</b> &lt;fakelua::syntax_tree_interface_ptr&gt; (73)
     <ul>
       <li>on left: <a href="#rule_35">35</a> <a href="#rule_36">36</a></li>
       <li>on right: <a href="#rule_33">33</a></li>
