--- a/src/bison/parser.html
+++ b/src/bison/parser.html
@@ -343,7 +343,7 @@
       <li>on right: <a href="#rule_33">33</a></li>
     </ul>
   </li>
-  <li><b>args</b> (74)
+  <li><b>args</b> &lt;fakelua::syntax_tree_interface_ptr&gt; (74)
     <ul>
       <li>on left: <a href="#rule_37">37</a> <a href="#rule_38">38</a> <a href="#rule_39">39</a> <a href="#rule_40">40</a></li>
       <li>on right: <a href="#rule_35">35</a> <a href="#rule_36">36</a></li>
@@ -367,19 +367,19 @@
       <li>on right: <a href="#rule_42">42</a></li>
     </ul>
   </li>
-  <li><b>tableconstructor</b> (78)
+  <li><b>tableconstructor</b> &lt;fakelua::syntax_tree_interface_ptr&gt; (78)
     <ul>
       <li>on left: <a href="#rule_47">47</a> <a href="#rule_48">48</a></li>
       <li>on right: <a href="#rule_29">29</a> <a href="#rule_39">39</a></li>
     </ul>
   </li>
-  <li><b>fieldlist</b> (79)
+  <li><b>fieldlist</b> &lt;fakelua::syntax_tree_interface_ptr&gt; (79)
     <ul>
       <li>on left: <a href="#rule_49">49</a> <a href="#rule_50">50</a></li>
       <li>on right: <a href="#rule_47">47</a> <a href="#rule_50">50</a></li>
     </ul>
   </li>
-  <li><b>field</b> (80)
+  <li><b>field</b> &lt;fakelua::syntax_tree_interface_ptr&gt; (80)
     <ul>
       <li>on left: <a href="#rule_51">51</a> <a href="#rule_52">52</a> <a href="#rule_53">53</a></li>
       <li>on right: <a href="#rule_49">49</a> <a href="#rule_50">50</a></li>
